--- a/NumberPad/Base.lproj/Main.storyboard
+++ b/NumberPad/Base.lproj/Main.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="TqI-qv-71v">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11185.3" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="TqI-qv-71v">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11151.4"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Intro View Controller-->
@@ -13,44 +15,46 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="yIV-uG-Pqw">
-                                <rect key="frame" x="233" y="0.0" width="135" height="600"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="yIV-uG-Pqw">
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ZE-rA-Zne">
-                                        <rect key="frame" x="0.0" y="0.0" width="135" height="150"/>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ZE-rA-Zne">
                                         <state key="normal" image="whiteboard"/>
                                         <connections>
                                             <action selector="startSandboxWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tVe-bN-axl"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fpt-yS-Bbt">
-                                        <rect key="frame" x="0.0" y="150" width="135" height="150"/>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fpt-yS-Bbt">
                                         <state key="normal" image="circleToy"/>
                                         <connections>
                                             <action selector="startCircumferenceDemoWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PI5-hh-55P"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xAJ-Bx-mXf">
-                                        <rect key="frame" x="0.0" y="300" width="135" height="150"/>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s1c-Ja-IWn">
+                                        <state key="normal" image="squareToy"/>
+                                        <connections>
+                                            <action selector="startSquareDemoWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="M1M-S6-1K8"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xAJ-Bx-mXf">
                                         <state key="normal" image="pythagorean"/>
                                         <connections>
                                             <action selector="startPythagoreanDemoWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uw8-Ng-BmC"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66T-Ft-5T1">
-                                        <rect key="frame" x="0.0" y="450" width="135" height="150"/>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66T-Ft-5T1">
                                         <state key="normal" image="football"/>
                                         <connections>
                                             <action selector="startFootballDemoWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ISm-av-1NO"/>
                                         </connections>
                                     </button>
                                 </subviews>
+                                <edgeInsets key="layoutMargins" top="40" left="8" bottom="20" right="8"/>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="yIV-uG-Pqw" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="2JF-uj-hFo"/>
                             <constraint firstItem="yIV-uG-Pqw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2bD-KG-vcT"/>
@@ -77,13 +81,14 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Uc-I7-AGK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-488" y="313"/>
+            <point key="canvasLocation" x="-638" y="176"/>
         </scene>
     </scenes>
     <resources>
         <image name="circleToy" width="135" height="136"/>
         <image name="football" width="125" height="75"/>
         <image name="pythagorean" width="135" height="134"/>
+        <image name="squareToy" width="150" height="153"/>
         <image name="whiteboard" width="135" height="135"/>
     </resources>
 </document>
